Modified css to add border in active state to prevent slight button shift on press.

--- a/design_originals/redesign_aug2016/assets/css/scss/graph.scss
+++ b/design_originals/redesign_aug2016/assets/css/scss/graph.scss
@@ -13,7 +13,7 @@
 		&.active {
 			background-color: darken(#CBD0D8, 20%);
 			color: #cc3700;
-			border: #cc3700;
+			border: solid 1px #CBD0D8;
 		}
 	}
 	.settings-menu {
